<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    // TODO (2) Create an xml resource directory
    // TODO (3) Add a PreferenceScreen with an EditTextPreference and ListPreference within the newly created xml resource directory
    <EditTextPreference
        android:defaultValue="@string/pref_namebox_default"
        android:inputType="text"
        android:key="@string/pref_namebox_key"
        android:singleLine="true"
        android:title="@string/pref_namebox_label"/>
    <CheckBoxPreference
        android:defaultValue="@bool/pref_checkbox_default"
        android:key="@string/pref_checkbox_key"
        android:summaryOff="@string/pref_checkbox_false"
        android:summaryOn="@string/pref_checkbox_true"
        android:title="@string/pref_checkbox_label" />
    <ListPreference
        android:defaultValue="@string/pref_list_value_1"
        android:entries="@array/pref_option_labels"
        android:entryValues="@array/pref_option_values"
        android:key="@string/pref_list_key"
        android:title="@string/pref_list_label"
        />

</PreferenceScreen>